--- a/app.css
+++ b/app.css
@@ -51,6 +51,10 @@ body {
     transition: 500ms;
 }
 
+#imageId {
+    padding-right: 0px;
+}
+
 @media (max-width: 1000px) {
     .content h1{
         font-size: 1.7rem;
